0027952: Visualization - do not reset RayTracing state on changing structures not in main Z-Layer